src/renderer/components/TracksListHeader/TracksListHeader.module.css
.tracksListHeader {
  border-bottom: 1px solid var(--border-color);
  color: var(--tracks-header-color);
  background-color: var(--tracks-header-bg);
  display: flex;
  width: 100%;
}

.cellTrackPlaying {
  width: 30px;
  text-align: center;
}

.cellTrack {
  flex: 1;
}

.cellDuration {
  width: 7%;
}

.cellArtist,
.cellAlbum,
.cellGenre {
  width: 20%;
}

